fix: game saves removal
