# backend/openAPI.yml
@@ -23,7 +23,6 @@ tags:
   - name: user-answers
   - name: user-conquests
   - name: user-progress
-  - name: game-saves
 
 components:
   securitySchemes:
@@ -224,16 +223,6 @@ components:
         sub_module_id:
           type: string
           format: uuid
-    GameSave:
-      properties:
-        id:
-          type: string
-          format: uuid
-        user_id:
-          type: string
-          format: uuid
-        current_phase:
-          type: integer
 
 paths:
   /sessions:
@@ -2271,99 +2260,6 @@ paths:
       responses:
         '200':
           description: Returns a successfully deleted user progress confirmation.
-        '400':
-          $ref:  '#/components/responses/IncorrectToken'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-
-  /game-saves:
-    post:
-      summary: Creates an game save.
-      tags:
-        - game-saves
-      security:
-        - bearerAuth: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-              schema:
-                type: object
-                properties:
-                  current_phase:
-                    type: integer
-                    example: 1
-      responses:
-        '200':
-          description: Returns a JSON containing the created game save.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  user_id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  current_phase:
-                    type: integer
-                    example: 1
-        '400':
-          $ref:  '#/components/responses/IncorrectToken'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-    get:
-      summary: Gets the game save by user id.
-      tags:
-        - game-saves
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Returns a JSON containing the game save.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  user_id:
-                    type: string
-                    format: uuid
-                    example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-                  current_phase:
-                    type: integer
-                    example: 1
-        '400':
-          $ref:  '#/components/responses/IncorrectToken'
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-  /game-saves/{id}:
-    delete:
-      summary: Deletes a game save.
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-            format: uuid
-            example: "3c68c90a-009b-4c59-9c7f-dab2774e9a57"
-          required: true
-          description: Game save id to delete it.
-      tags:
-        - game-saves
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Returns a successfully deleted game save confirmation.
         '400':
           $ref:  '#/components/responses/IncorrectToken'
         '401':
